# serializer version: 1
# name: test_unknown_tool[darwin-arm64]
  dict({
    'exit_code': 2,
    'stderr': '',
    'stdout': '''
      ╭───────── ASH Dependency Installer ─────────╮
      │ Installing ASH dependencies                │
      │ Target bin path: bin                       │
      │ Plugin types: converter, scanner, reporter │
      ╰────────────────────────────────────────────╯
      Getting platform and architecture
      Installing dependencies for platform: darwin, architecture: arm64
      [<LOG_TIME>] INFO     Loaded 2 converters, 16 scanners, and 15 reporters
      ╭─────────────────────────────────────── Nothing installed ────────────────────────────────────────╮
      │ Unknown tool(s): gryp                                                                            │
      │ Available: actionlint, archive, bandit, cdk-nag, cfn-guard, cfn-lint, cfn-nag, checkov, csv,     │
      │ cyclonedx, detect-secrets, flat-json, github-ghas, gitlab-cyclonedx, gitlab-sast, gitleaks,      │
      │ grype, html, junitxml, jupyter, markdown, npm-audit, ocsf, opengrep, sarif, semgrep, spdx, syft, │
      │ text, trivy, unused-suppressions, yaml, zizmor                                                   │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_unknown_tool[linux-amd64]
  dict({
    'exit_code': 2,
    'stderr': '',
    'stdout': '''
      ╭───────── ASH Dependency Installer ─────────╮
      │ Installing ASH dependencies                │
      │ Target bin path: bin                       │
      │ Plugin types: converter, scanner, reporter │
      ╰────────────────────────────────────────────╯
      Getting platform and architecture
      Installing dependencies for platform: linux, architecture: amd64
      [<LOG_TIME>] INFO     Loaded 2 converters, 16 scanners, and 15 reporters
      ╭─────────────────────────────────────── Nothing installed ────────────────────────────────────────╮
      │ Unknown tool(s): gryp                                                                            │
      │ Available: actionlint, archive, bandit, cdk-nag, cfn-guard, cfn-lint, cfn-nag, checkov, csv,     │
      │ cyclonedx, detect-secrets, flat-json, github-ghas, gitlab-cyclonedx, gitlab-sast, gitleaks,      │
      │ grype, html, junitxml, jupyter, markdown, npm-audit, ocsf, opengrep, sarif, semgrep, spdx, syft, │
      │ text, trivy, unused-suppressions, yaml, zizmor                                                   │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
# name: test_unknown_tool[windows-amd64]
  dict({
    'exit_code': 2,
    'stderr': '',
    'stdout': '''
      ╭───────── ASH Dependency Installer ─────────╮
      │ Installing ASH dependencies                │
      │ Target bin path: bin                       │
      │ Plugin types: converter, scanner, reporter │
      ╰────────────────────────────────────────────╯
      Getting platform and architecture
      Installing dependencies for platform: windows, architecture: amd64
      [<LOG_TIME>] INFO     Loaded 2 converters, 16 scanners, and 15 reporters
      ╭─────────────────────────────────────── Nothing installed ────────────────────────────────────────╮
      │ Unknown tool(s): gryp                                                                            │
      │ Available: actionlint, archive, bandit, cdk-nag, cfn-guard, cfn-lint, cfn-nag, checkov, csv,     │
      │ cyclonedx, detect-secrets, flat-json, github-ghas, gitlab-cyclonedx, gitlab-sast, gitleaks,      │
      │ grype, html, junitxml, jupyter, markdown, npm-audit, ocsf, opengrep, sarif, semgrep, spdx, syft, │
      │ text, trivy, unused-suppressions, yaml, zizmor                                                   │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  
    ''',
  })
# ---
